# ConservationLaws

./: LICENSE  README.md  pyproject.toml  requirements.txt  test.sh
Burgers/: baseline.py  eval.py  eval_time.py  train.py
Burgers/dataset/: data.py
Burgers2D/: baseline.py  eval.py  eval_time.py  train.py
Burgers2D/dataset/: data.py
Euler/: baseline.py  eval.py  eval_time.py  train.py
Euler/checkpoints/: readme.md
Euler/dataset/: data.py
Euler2D/: baseline.py  baseline_periodic.py  baseline_pri.py  common.py  common_periodic.py  common_pri.py  eval.py  eval_periodic.py  eval_periodic_time.py  eval_pri.py  eval_time.py  train.py  train_periodic.py  train_pri.py
Euler2D/dataset/: data.py  data_periodic.py  reassemble_partial_train.py
PureConvection/: baseline.py  eval.py  eval_time.py  train.py
PureConvection/dataset/: data.py
SWE/: baseline.py  eval.py  eval_time.py  train.py
SWE/dataset/: data.py
src/conslaw/: __init__.py  checkpoints.py  eval_reports.py  models.py  solver.py
